--- a/src/HOC/Layout/layout.module.css
+++ b/src/HOC/Layout/layout.module.css
@@ -7,4 +7,6 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    padding: 150px 0 0 0;   
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(80,80,115,1) 35%, rgba(0,212,255,1) 100%);
 }
