--- a/src/components/FinishedQuiz/finished-quiz.module.css
+++ b/src/components/FinishedQuiz/finished-quiz.module.css
@@ -20,6 +20,10 @@
     font-size: 24px;
 }
 
+.FinishedQuiz a {
+    text-decoration: none;
+}
+
 .FinishedQuiz button {
     font-size: 20px;
     margin: 0 15px 0 0;
