--- a/src/HOC/Layout/layout.module.css
+++ b/src/HOC/Layout/layout.module.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    height: 100vh;
     padding: 150px 0 0 0;      
     background: radial-gradient(circle, rgba(173,170,221,1) 0%, rgba(20,44,73,1) 100%);
 }
