--- a/src/containers/QuizCreate/quiz-create.module.css
+++ b/src/containers/QuizCreate/quiz-create.module.css
@@ -1,15 +1,15 @@
-.Auth {
+.QuizCreator {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.Auth h3 {
+.QuizCreator h3 {
     color: #fff;
     margin: 0 0 20px 0;
 }
 
-.Auth form {
+.QuizCreator form {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -20,8 +20,8 @@
     border-radius: 5px;
 }
 
-.Auth form > *:not(:last-child) {
-   margin: 0 0 20px 0;
+.QuizCreator form > *:not(:last-child) {
+    margin: 0 0 20px 0;
 }
 
 .BtnWrapper {
